<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">系统设置</string>
    <string name="setting_description">""</string>
    <string name="lan_settings">有线设置</string>
    <string name="wifi_settings">无线设置</string>
    <string name="display_settings">声音&amp;显示设置</string>
    <string name="date_time_settings">日期和时间</string>
    <string name="advance_settings">高级设置</string>
    <string name="deviceinfo_settings">设备信息</string>
    <string name="systeminfo_settings">本机信息</string>
    <string name="networkinfo_settings">网络信息</string>
    <string name="versioninfo_settings">版本信息</string>
    <string name="regioninfo_settings">大区信息</string>
    <string name="local_mediaplay">本地媒体</string>
    <string name="itv_settings">账号&amp;平台设置</string>
    <string name="netinformation_settings">网络信息</string>
    <string name="other_settings">其他设置</string>
    <string name="reboot_settings">重启系统</string>
    <string name="reboot_message">"点击确定，设备将重启"</string>
    <string name="reboot_ok">确认</string>
    <string name="reboot_cancel">"取消"</string>
    <string name="net_diagnosis">网络诊断&amp;测速</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用户名:</string>
    <string name="password">"密    码:"</string>
    <string name="submit">"确    定"</string>
    <string name="saveConfig">"保    存"</string>
    <string name="change_mode">"点击切换至电信DHCP"</string>
    <string name="password_hint">"请输入密码"</string>
    <string name="username_hint">"请输入用户名"</string>
    <string name="username_empty">"用户名不能为空"</string>
    <string name="password_empty">"密码不能为空"</string>
    <string name="lan_desc">"静态：手动设置上网地址        DHCP：自动获取IP地址        IPOE：认证后，自动获取IP地址"</string>
    <string name="lan_setting">有线接入</string>
    <string name="stack_switch">双栈切换</string>
    <string name="pppoe_setting">PPPoE设置</string>
    <string name="PPPoE">PPPoE</string>
    <string name="lan">静态连接</string>
    <string name="nativeDHCP">DHCP</string>
    <string name="nativeIPOE">IPOE</string>
    <string name="ipv4">IPv4</string>
    <string name="ipv6">IPv6</string>
    <string name="getip">"【自动获取】"</string>
    <string name="getipaddress">"连接"</string>
    <string name="ipaddress">IP地址</string>
    <string name="mask">子网掩码</string>
    <string name="defaultNet">默认网关</string>
    <string name="ipv4dns">DNS服务器</string>
    <string name="defaultvalue">""</string>
    <string name="split"></string>
    <string name="ipoe_getipaddress">"连接"</string>
    <string name="change_to_ipoe">正在认证并获取IP，请稍候&#8230;</string>
    <string name="change_to_ipoe_fail">"认证失败，请确认用户名和密码"</string>
    <string name="ipv6state">IPv6状态:</string>
    <string name="closed">已关闭</string>
    <string name="opend">已打开</string>
    <string name="masklength">子网掩码长度:</string>
    <string name="masklength2">64</string>
    <string name="dnsserver">DNS服务器</string>
    <string name="setip">"连   接"</string>
    <string name="defaultvlaue2">0.0.0.0</string>
    <string name="not_modify">未做任何修改</string>
    <string name="ipExist">IP地址已获取到</string>
    <string name="reconnecting">正在重连，请稍候&#8230;&#8230;</string>
    <string name="pppoefailed">PPPoE拨号失败，请重试&#8230;</string>
    <string name="pppoesuccess">PPPoE拨号成功，已获取到IP地址</string>
    <string name="LANfailed">静态网络连接失败</string>
    <string name="LANsuccess">已连接静态网络</string>
    <string name="DHCPfailed">DHCP连接失败</string>
    <string name="DHCPsuccess">已连接DHCP</string>
    <string name="IPOEsuccess">已连接IPOE</string>
    <string name="IPOEfailed">IPOE认证获取IP地址失败&#8230;</string>
    <string name="ipaddr_error">IP地址不合法或存在空字段，请重新输入</string>
    <string name="gateway_error">网关地址不合法或存在空字段，请重新输入</string>
    <string name="mask_error">子网掩码地址不合法或存在空字段，请重新输入</string>
    <string name="dns_error">DNS服务器地址不合法或存在空字段，请重新输入</string>
    <string name="return_zeroconfig">请按【返回】键退出设置，进入零配置流程</string>
    <string name="delaytips">温馨提示：首次安装请走零配置\n在设置中停留5分钟之后可以手动修改账号</string>
    <string name="bluetooth_invalid">蓝牙设备</string>
    <string name="bluetooth_tip">已配对的设备可检测到此设备</string>
    <string name="device_bounded_success">配对成功</string>
    <string name="device_bounded_failed">配对失败</string>
    <string name="device_bounded">已配对</string>
    <string name="device_bounding">正在配对······</string>
    <string name="device_unbounded">未配对</string>
    <string name="device_connected">已连接</string>
    <string name="device_disconnect">未连接</string>
    <string name="device_connecting">正在连接······</string>
    <string name="bluetooth_device">可用蓝牙设备</string>
    <string name="bluetooth_device_none">未在附近找到蓝牙设备</string>
    <string name="discoverable">Discoverable</string>
    <string name="start_scan">搜索设备</string>
    <string name="scan_finished">搜索完成</string>
    <string name="scaning">正在搜索...</string>
    <string name="stop_scan">停止</string>
    <string name="bluetooth_setting">蓝牙设置</string>
    <string name="bluetooth_switch">蓝牙开关</string>
    <string name="bluetooth_switch_name">蓝牙</string>
    <string name="bluetooth_name">本机名称:</string>
    <string name="bluetooth_bounded_devices">已配对的设备</string>
    <string name="bluetooth_devices">可用设备</string>
    <string name="bluetooth_noenable">无可用设备</string>
    <string name="bluetooth_auto_open">开</string>
    <string name="bluetooth_auto_close">关</string>
    <string name="bluetooth_button_title">"蓝牙"</string>
    <string name="bluetooth_available">附近的设备</string>
    <string name="bluetooth_turning_on">正在打开蓝牙...</string>
    <string name="bluetooth_turning_off">正在关闭蓝牙...</string>
    <string name="bluetooth_closed">要搜索可用设备，请打开蓝牙功能。</string>
    <string name="itv_yewu">ITV业务</string>
    <string name="itv_setting">账号&amp;平台配置</string>
    <string name="itv_accountsetting">账号设置</string>
    <string name="itv_tvmssetting">TVMS信息</string>
    <string name="itv_serversetting">平台配置</string>
    <string name="itv_gatewaysetting">网管信息</string>
    <string name="itv_platform">"当 前 平 台 :"</string>
    <string name="itv_mainserver">认证服务器地址:</string>
    <string name="itv_backupserver">备用认证服务器:</string>
    <string name="itv_tms_mainserver">终端管理平台主地址:</string>
    <string name="itv_tms_backupserver">终端管理平台备地址:</string>
    <string name="itv_ntpserver">时间服务器地址:</string>
    <string name="itv_ntpbackupserver">备用时间服务器:</string>
    <string name="itv_updateserver">升级服务器地址:</string>
    <string name="itv_backupdateserver">备用升级服务器地址:</string>
    <string name="itvaccount">业务账号设置</string>
    <string name="itv_account">"业 务 账 号 :"</string>
    <string name="itv_password">"业 务 密 码 :"</string>
    <string name="itv_huawei">"华为"</string>
    <string name="itv_zhongxin">"中兴"</string>
    <string name="itv_custom">"自定义"</string>
    <string name="tvms_heartbeatURL">"心跳消息URL:"</string>
    <string name="tvms_vodURL">"VOD消息URL:"</string>
    <string name="tvms_heartbeatperiod">"心 跳 周 期(s):"</string>
    <string name="tvms_delaytime">"延 迟 时 间(s):"</string>
    <string name="gateway_heartbeatperiod">"心跳周期:"</string>
    <string name="gateway_url">"网管地址:"</string>
    <string name="gateway_regeuser">"注册用户:"</string>
    <string name="gateway_regepsd">"注册密码:"</string>
    <string name="gateway_cpeuser">"CPE用户 :"</string>
    <string name="gateway_cpepsd">"CPE密码 :"</string>
    <string name="gateway_regeuser_value">"STB"</string>
    <string name="gateway_cpeuser_value">"ITMS"</string>
    <string name="display_setting">声音&amp;显示</string>
    <string name="sound_setting">声音模式</string>
    <string name="media_setting">显示制式</string>
    <string name="display_off_set">视频输出</string>
    <string name="display_media_set">设置分辨率</string>
    <string name="auto_HDMI">"自动"</string>
    <string name="sound_HDMI">"HDMI 透传"</string>
    <string name="sound_noHDMI">"HDMI非透传"</string>
    <string name="auto_SPDIF">"自动"</string>
    <string name="sound_SPDIF">"SPDIF透传"</string>
    <string name="sound_noSPDIF">SPDIF非透传</string>
    <string name="display_offsettitle">视频宽高比设置：</string>
    <string name="display_auto">"自      动"</string>
    <string name="display_4to3">"4    :    3"</string>
    <string name="display_16to9">"16  :    9"</string>
    <string name="display_changetypetitle">视频宽高比转换方式设置：</string>
    <string name="display_draw">"拉伸"</string>
    <string name="display_blackedge">"加黑边"</string>
    <string name="display_pal">"P  A  L "</string>
    <string name="display_ntsc">"N T S C"</string>
    <string name="storage_setting">存储</string>
    <string name="storage_internal">内部存储</string>
    <string name="total_space">总空间</string>
    <string name="available_space">可用空间</string>
    <string name="system_flash">FLASH存储</string>
    <string name="system_flash_daxiao">"4 GB"</string>
    <string name="system_info">信息&amp;高级设置</string>
    <string name="system_brand">品牌</string>
    <string name="system_model">设备型号</string>
    <string name="system_fpu">FPU</string>
    <string name="system_fpu_info">Neon*4</string>
    <string name="system_ram">RAM</string>
    <string name="system_rom">ROM</string>
    <string name="system_ram_size">2GB</string>
    <string name="system_rom_size">16GB</string>
    <string name="system_gpu">3D GPU</string>
    <string name="system_gpu_info">Mali T764*4</string>
    <string name="system_version">系统版本</string>
    <string name="system_kernal_version">内核版本</string>
    <string name="system_cpu">CPU</string>
    <string name="system_cpu_info">CA17*4</string>
    <string name="system_mac_address">MAC地址</string>
    <string name="system_ip_address">IP地址</string>
    <string name="system_serial_number">序列号</string>
    <string name="system_build_version">版本号</string>
    <string name="system_start_up_time">开机时间</string>
    <string name="display_title">画面设置</string>
    <string name="scale_title">画面缩放</string>
    <string name="scale_title_hint">调整画面缩放的百分比</string>
    <string name="scale_introduce_one">因为不同的电视对于视频信号处理的差异，可能导致画面有不完整的现象。</string>
    <string name="scale_introduce_two">请调节缩放比例，直至屏幕的四边的警示色区域移出屏幕外。</string>
    <string name="scale_move_back">按“返回”键退出并生效当前设置</string>
    <string name="move_title">画面位移</string>
    <string name="move_title_hint">调整画面在屏幕中的位置</string>
    <string name="move_introduce_two">调整画面位置，使主要内容在电视屏幕以内</string>
    <string name="move_OK">按“确定”键应用设置并进入缩放设置</string>
    <string name="scale_OK">按“确定”键应用设置并进入位移设置</string>
    <string name="wifi_signal3">"信号强"</string>
    <string name="wifi_signal2">"信号较强"</string>
    <string name="wifi_signal1">"信号较弱"</string>
    <string name="wifi_signal0">"信号弱"</string>
    <string name="wifi_signal00">"无信号或不在范围"</string>
    <string name="wifi_connect">"连接"</string>
    <string name="wifi_connected">"已连接"</string>
    <string name="wifi_ip">"IP  地址 :"</string>
    <string name="button_cancle">"取消"</string>
    <string name="button_sure">确 定</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_security">密码保护:</string>
    <string name="wifi_signal">信号强度 :</string>
    <string name="wifi_status">wifi状态 :</string>
    <string name="wifi_speed">连接速度</string>
    <string name="wifi_ip_address">IP 地址</string>
    <string name="wifi_ip_address_hint" translatable="false">192.168.1.128</string>
    <string name="wifi_eap_method">EAP方法</string>
    <string name="wifi_password">密码:</string>
    <string name="wifi_show_password">密码可见</string>
    <string name="wifi">Wifi</string>
    <string name="cancel">"取    消"</string>
    <string name="connect">"连    接"</string>
    <string name="pppoe_pass_visible">"密码可见"</string>
    <string name="wifi_setting">无线接入</string>
    <string name="nextstep">下一步</string>
    <string name="prestep">上一步</string>
    <string name="wifi_pppoe">无线PPPoE设置</string>
    <string name="wifi_accessmode">请选择wifi接入模式：</string>
    <string name="ssid">SSID:</string>
    <string name="wifi_forget">忘记此网络</string>
    <string name="forget">"忘    记"</string>
    <string name="wifi_ap">Wifi热点</string>
    <string name="display_area">图像显示区域设置</string>
</resources>