<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    
    <ImageView 
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/display_logo"
        android:contentDescription="@string/action_settings"/>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginLeft="50dp"
        android:padding="10dp"
        android:orientation="vertical">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="23sp"
			android:textColor="#ffe1e1e1"
			android:text="@string/display_offsettitle"/>
        <RadioGroup
		    android:id="@+id/RadioGroup_off_set"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			android:background="@drawable/display_box_background">
		    <RadioButton
			    android:id="@+id/display_off_set_a"
			    android:layout_width="600dp"
			    android:layout_height="wrap_content"
			    android:text="@string/display_auto"
			    android:textSize="21sp"
			    android:textColor="#ffe1e1e1"
				android:button="@null"
				android:nextFocusUp="@+id/display_off_set"
                android:nextFocusLeft="@id/media_set"
			    android:drawableRight="@drawable/display_selector"
			    android:background="@drawable/button_selector"/>
		    
		    <RadioButton
			    android:id="@+id/display_off_set_b"
			    android:layout_width="600dp"
			    android:layout_height="wrap_content"
			    android:text="@string/display_4to3"
			    android:layout_marginTop="12dp"
			    android:textSize="21sp"
		        android:textColor="#ffe1e1e1"
				android:button="@null"
                android:nextFocusLeft="@id/media_set"
			    android:drawableRight="@drawable/display_selector"
			    android:background="@drawable/button_selector"/>
		    <RadioButton
		        android:id="@+id/display_off_set_c"
		        android:layout_width="600dp"
		        android:layout_marginTop="12dp"
		        android:layout_height="wrap_content"
		        android:text="@string/display_16to9"
		        android:textSize="21sp"
		        android:textColor="#ffe1e1e1"
				android:button="@null"
                android:nextFocusLeft="@id/media_set"
			    android:drawableRight="@drawable/display_selector"
			    android:background="@drawable/button_selector"/>
	    </RadioGroup>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="23sp"
			android:textColor="#ffe1e1e1"
			android:layout_marginTop="12dp"
			android:text="@string/display_changetypetitle"/>
		<RadioGroup
			android:id="@+id/RadioGroup_off_changetype"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:background="@drawable/display_box_background">
			<RadioButton
				android:id="@+id/display_off_changetype_a"
				android:layout_width="600dp"
				android:layout_height="wrap_content"
				android:text="@string/display_draw"
				android:textSize="21sp"
				android:textColor="#ffe1e1e1"
				android:button="@null"
				android:nextFocusUp="@+id/display_off_set_c"
				android:nextFocusLeft="@id/media_set"
				android:drawableRight="@drawable/display_selector"
				android:background="@drawable/button_selector"/>

			<RadioButton
				android:id="@+id/display_off_changetype_b"
				android:layout_width="600dp"
				android:layout_height="wrap_content"
				android:text="@string/display_blackedge"
				android:layout_marginTop="12dp"
				android:textSize="21sp"
				android:textColor="#ffe1e1e1"
				android:button="@null"
				android:nextFocusLeft="@id/media_set"
				android:drawableRight="@drawable/display_selector"
				android:background="@drawable/button_selector"/>

		</RadioGroup>
	    <Button 
		    android:id="@+id/area_set"
		    android:layout_width="600dp"
		    android:layout_height="40dp"
		    android:layout_marginTop="12dp"
		    android:gravity="left|center_vertical"
		    android:text="@string/display_area"
		    android:textSize="23sp"
		    android:textColor="#ffe1e1e1"
            android:nextFocusLeft="@id/media_set"
		    android:drawableRight="@drawable/forward"
		    android:background="@drawable/button_selector"/>
    </LinearLayout>
</LinearLayout>
