<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@null" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:text="@string/lan_setting"
            android:textColor="#ffe1e1e1"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pppoe"
            style="?title_button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:text="@string/PPPoE"
            android:visibility="gone" />

        <Button
            android:id="@+id/lan"
            style="?title_button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:text="@string/lan" />

        <Button
            android:id="@+id/nativedhcp"
            style="?title_button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:text="@string/nativeDHCP" />

        <Button
            android:id="@+id/nativeipoe"
            style="?title_button"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:text="@string/nativeIPOE" />
    </LinearLayout>

    <Button
        android:layout_width="980dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/app_name"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:textColor="#565656" />

    <FrameLayout
        android:id="@+id/lan_frameLayout"
        android:layout_width="980dp"
        android:layout_height="400dp"
        android:layout_gravity="center"></FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/lan_desc"
        android:textColor="#aeaeae"
        android:textSize="17sp" />
</LinearLayout>
