<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/wifi_netMode"
    android:layout_width="680dp"
    android:layout_height="250dp"
   	android:background="@drawable/sysinfo"
    android:orientation="vertical"
    android:visibility="visible">
      
    <TextView 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:layout_marginLeft="40dp"
		android:text="@string/wifi_accessmode"
		android:textSize="21sp"
		android:textColor="#ffe1e1e1"/>
    <RadioGroup
	    android:id="@+id/RadioGroup_netmode"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	   	android:layout_marginLeft="70dp"
	    android:orientation="horizontal">
	    <RadioButton
		    android:id="@+id/wifi_netmode_dhcp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:drawablePadding="15dp"
		    android:text="@string/nativeDHCP"
		    android:textSize="21sp"
		    android:textColor="#ffe1e1e1"
			android:button="@null"
		    android:drawableLeft="@drawable/display_selector"
		    android:background="@drawable/button_selector"
		    android:layout_marginRight="50dp"/>
        <RadioButton
            android:id="@+id/wifi_netmode_ipoe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:text="@string/nativeIPOE"
            android:textSize="21sp"
            android:textColor="#ffe1e1e1"
            android:button="@null"
            android:drawableLeft="@drawable/display_selector"
            android:background="@drawable/button_selector"
            android:layout_marginRight="50dp"/>
		<RadioButton
	        android:id="@+id/wifi_netmode_pppoe"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:drawablePadding="15dp"
		    android:text="@string/PPPoE"
		    android:textSize="21sp"
		    android:textColor="#ffe1e1e1"
			android:button="@null"
		    android:drawableLeft="@drawable/display_selector"
		    android:background="@drawable/button_selector"
		    android:layout_marginRight="50dp"/>
		<RadioButton
		    android:id="@+id/wifi_netmode_static"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:drawablePadding="15dp"
		    android:text="@string/lan"
		    android:textSize="21sp"
		    android:textColor="#ffe1e1e1"
			android:button="@null"
		    android:drawableLeft="@drawable/display_selector"
		    android:background="@drawable/button_selector"/>
	</RadioGroup>
	<LinearLayout 
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginLeft="140dp"
		android:layout_marginTop="50dp">
    	<Button 
		    android:id="@+id/wifi_netmode_nextstep"
		    android:layout_width="120dp"
		    android:layout_height="50dp"
		    android:layout_marginLeft="150dp"
		    android:layout_marginRight="20dp"
		    android:textSize="21sp"
		    android:text="@string/nextstep"
		    android:textColor="#ffe1e1e1"
		    android:background="@drawable/submit_selector"
		    style="?android:attr/buttonBarButtonStyle"/>
    	<Button 
		    android:id="@+id/wifi_netmode_prestep"
		    android:layout_width="120dp"
		    android:layout_height="50dp"
		    android:textSize="21sp"
		    android:text="@string/prestep"
		    android:textColor="#ffe1e1e1"
		    android:background="@drawable/submit_selector"
		    style="?android:attr/buttonBarButtonStyle"/>
  	</LinearLayout>
 </LinearLayout>
