<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="680dp"
    android:layout_height="250dp"
    android:orientation="vertical">
    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:text="@string/wifi_pppoe"
		android:textSize="25sp"
		android:textColor="#ffe1e1e1"
		android:gravity="center_vertical"/>
    <LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="190dp"
		android:layout_marginBottom="10dp">
        <CheckBox 
           	android:id="@+id/wifi_pppoe_pass_visiable"
           	android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:drawablePadding="10dp"
           	android:text="@string/pppoe_pass_visible"
           	android:textColor="#ffe1e1e1"
           	android:textSize="19sp"
           	android:button="@null"
           	android:drawableLeft="@drawable/display_selector"
           	android:background="@drawable/button_selector"
           	android:checked="false"/>
	    <Button 
		    android:id="@+id/wifi_pppoe_submit"
		    android:layout_width="120dp"
		    android:layout_height="50dp"
		    android:layout_marginLeft="150dp"
		    android:textSize="21sp"
		    android:text="@string/connect"
		    android:textColor="#ffe1e1e1"
		    android:background="@drawable/submit_selector"/>
	    <Button 
		    android:id="@+id/wifi_pppoe_prestep"
		    android:layout_width="120dp"
		    android:layout_height="50dp"
		    android:layout_marginLeft="30dp"
		    android:textSize="21sp"
		    android:text="@string/prestep"
		    android:textColor="#ffe1e1e1"
		    android:background="@drawable/submit_selector"/>
	</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="35dp">
        <EditText 
            android:id="@+id/wifi_pppoe_username"
            android:inputType="text"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:hint="@string/username_hint"
            android:textSize="21sp"
            android:textColor="#ffe1e1e1"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:singleLine="true"
            android:maxLength="30"
            android:background="@drawable/edit_selector"
            android:labelFor="@id/wifi_pppoe_username"
            android:layout_marginBottom="20dp"/>
        <EditText 
            android:id="@+id/wifi_pppoe_password"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textSize="21sp"
            android:textColor="#ffe1e1e1"
            android:textCursorDrawable="@drawable/edit_cursor"
            android:singleLine="true"
            android:maxLength="16"
            android:background="@drawable/edit_selector"
            android:labelFor="@id/wifi_pppoe_password"
            android:nextFocusDown="@id/wifi_pppoe_submit"/>
    </LinearLayout>
</RelativeLayout>
