<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:background="@drawable/dialog_bg"
    android:orientation="vertical">
    <LinearLayout 
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="30dp"
    	android:layout_marginRight="30dp"
    	android:layout_marginBottom="10dp"
    	android:layout_marginLeft="10dp">
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
			android:text="@string/wifi_forget"
			android:textSize="23sp"
			android:textColor="#ffe1e1e1"/>
      	<TextView 
	        android:id="@+id/wifi_forget_ssid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ssid"
	        android:textSize="23sp"
	        android:textColor="#ffe1e1e1"/>
  	</LinearLayout>
  	
  	<LinearLayout 
      	android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="30dp"
		android:layout_gravity="center_horizontal">
	   	<Button 
		    android:id="@+id/wifi_forget_submit"
		    android:layout_width="120dp"
		    android:layout_height="50dp"
		    android:layout_marginRight="20dp"
		    android:textSize="21sp"
		    android:text="@string/forget"
		    android:textColor="#ffe1e1e1"
		    android:background="@drawable/submit_selector"
		    style="?android:attr/buttonBarButtonStyle"/>
	   	<Button 
		    android:id="@+id/wifi_forget_cancle"
		    android:layout_width="120dp"
		    android:layout_height="50dp"
		    android:textSize="21sp"
		    android:text="@string/cancel"
		    android:textColor="#ffe1e1e1"
		    android:background="@drawable/submit_selector"
		    style="?android:attr/buttonBarButtonStyle"/>
 	</LinearLayout>
</LinearLayout>
